<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spacebackground"
    tools:context=".SaveResultActivity">


    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="137dp"
        android:ems="10"
        android:hint="@string/nick"
        android:inputType="textPersonName"
        android:text="@string/nick"
        android:textColor="#ffffff"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:text="@string/punkty"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginBottom="205dp"
        android:text="@string/nowa_graa" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editText5"
        android:layout_alignBottom="@+id/button5"
        android:layout_marginEnd="-38dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/zapisz_wynik" />

    <Button
        android:id="@+id/button7"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:text="@string/menu" />
</RelativeLayout>