<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spacebackground"
    tools:context=".How2PlayActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="115dp"
        android:layout_height="37dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:text="@string/jak_grać"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="41dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/menu" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:gravity="center"
        android:text="@string/aaa"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</RelativeLayout>