<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spacebackground"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"

        android:text="@string/kosmiczna_przygoda"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="24sp" />


    <Button
        android:id="@+id/button"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_marginStart="-3dp"
        android:layout_marginLeft="-3dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="-12dp"
        android:layout_marginRight="-12dp"
        android:text="@string/rozpocznij_gre" />

    <Button
        android:id="@+id/button2"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="-5dp"
        android:layout_marginRight="-5dp"
        android:text="@string/jak_gra" />

    <Button
        android:id="@+id/button3"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_alignStart="@+id/button"
        android:layout_alignLeft="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignRight="@+id/button"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginRight="-1dp"
        android:text="@string/zobacz_wyniki" />

</RelativeLayout>